--- a/CinemaBook/Scence/Manager/Management/MangamentBill/ManagementBillFoodCombo/view/cell/ManagementBillFoodComboItemTableViewCell.xib
+++ b/CinemaBook/Scence/Manager/Management/MangamentBill/ManagementBillFoodCombo/view/cell/ManagementBillFoodComboItemTableViewCell.xib
@@ -13,29 +13,46 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ManagementBillFoodComboItemTableViewCell" customModule="CinemaBook" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sWf-8B-zQ3">
-                        <rect key="frame" x="10" y="10" width="300" height="130"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sWf-8B-zQ3">
+                        <rect key="frame" x="10" y="10" width="300" height="180"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="aNo-GF-3TM">
-                                <rect key="frame" x="0.0" y="0.0" width="300" height="130"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="aNo-GF-3TM">
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="180"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l4y-tb-IRs">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="35.333333333333336"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ĐÃ THANH TOÁN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgP-vv-9gl">
+                                                <rect key="frame" x="79.666666666666686" y="7.3333333333333339" width="141" height="20.333333333333329"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" name="outgoingMessageBackground"/>
+                                        <constraints>
+                                            <constraint firstItem="XgP-vv-9gl" firstAttribute="centerX" secondItem="l4y-tb-IRs" secondAttribute="centerX" id="O8w-gq-ZWl"/>
+                                            <constraint firstItem="XgP-vv-9gl" firstAttribute="centerY" secondItem="l4y-tb-IRs" secondAttribute="centerY" id="fDG-PP-WC3"/>
+                                        </constraints>
+                                    </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qwu-BX-kVK">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="32.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="36.333333333333336" width="300" height="35.000000000000007"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mã hoá đơn:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2aw-BB-JmK">
-                                                <rect key="frame" x="20.000000000000007" y="5.9999999999999982" width="94.666666666666686" height="20.333333333333329"/>
+                                                <rect key="frame" x="20.000000000000007" y="7.3333333333333268" width="94.666666666666686" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0u-zD-udH">
-                                                <rect key="frame" x="262" y="5.9999999999999982" width="18" height="20.333333333333329"/>
+                                                <rect key="frame" x="262" y="7.3333333333333268" width="18" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -50,16 +67,16 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ljw-Kz-tC0">
-                                        <rect key="frame" x="0.0" y="32.666666666666657" width="300" height="32.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="72.333333333333329" width="300" height="35.333333333333329"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Số lượng:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zgb-ln-aBr">
-                                                <rect key="frame" x="20" y="5.9999999999999982" width="71.333333333333329" height="20.333333333333329"/>
+                                                <rect key="frame" x="20" y="7.6666666666666696" width="71.333333333333329" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="caO-7y-orI">
-                                                <rect key="frame" x="269.66666666666669" y="5.9999999999999982" width="10.333333333333314" height="20.333333333333329"/>
+                                                <rect key="frame" x="269.66666666666669" y="7.6666666666666696" width="10.333333333333314" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -73,17 +90,41 @@
                                             <constraint firstItem="zgb-ln-aBr" firstAttribute="leading" secondItem="Ljw-Kz-tC0" secondAttribute="leading" constant="20" id="cso-Si-PI1"/>
                                         </constraints>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qTB-1I-Oo2">
+                                        <rect key="frame" x="0.0" y="108.66666666666667" width="300" height="35.000000000000014"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ngảy đặt:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nsf-Hn-P5F">
+                                                <rect key="frame" x="20" y="7.3333333333333268" width="74" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27/09/2001" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KON-ej-Bol">
+                                                <rect key="frame" x="193.33333333333334" y="7.3333333333333268" width="86.666666666666657" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="KON-ej-Bol" secondAttribute="trailing" constant="20" id="F0h-eD-X9w"/>
+                                            <constraint firstItem="Nsf-Hn-P5F" firstAttribute="leading" secondItem="qTB-1I-Oo2" secondAttribute="leading" constant="20" id="MuV-A5-0U5"/>
+                                            <constraint firstItem="Nsf-Hn-P5F" firstAttribute="centerY" secondItem="qTB-1I-Oo2" secondAttribute="centerY" id="kUi-Jm-at0"/>
+                                            <constraint firstItem="KON-ej-Bol" firstAttribute="centerY" secondItem="qTB-1I-Oo2" secondAttribute="centerY" id="tiK-qU-01H"/>
+                                        </constraints>
+                                    </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ilv-93-qGT">
-                                        <rect key="frame" x="0.0" y="65" width="300" height="32.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="144.66666666666666" width="300" height="35.333333333333343"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tổng tiền:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gl1-jn-K98">
-                                                <rect key="frame" x="20" y="5.9999999999999982" width="75.333333333333329" height="20.333333333333329"/>
+                                                <rect key="frame" x="20" y="7.6666666666666838" width="75.333333333333329" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="14,000,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KQn-4l-JtE">
-                                                <rect key="frame" x="193.66666666666666" y="5.9999999999999982" width="86.333333333333343" height="20.333333333333329"/>
+                                                <rect key="frame" x="193.66666666666666" y="7.6666666666666838" width="86.333333333333343" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" systemColor="systemRedColor"/>
                                                 <nil key="highlightedColor"/>
@@ -97,24 +138,8 @@
                                             <constraint firstItem="gl1-jn-K98" firstAttribute="centerY" secondItem="Ilv-93-qGT" secondAttribute="centerY" id="miW-FJ-mns"/>
                                         </constraints>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l4y-tb-IRs">
-                                        <rect key="frame" x="0.0" y="97.666666666666671" width="300" height="32.333333333333329"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ĐÃ THANH TOÁN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgP-vv-9gl">
-                                                <rect key="frame" x="79.666666666666686" y="5.9999999999999982" width="141" height="20.333333333333329"/>
-                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <color key="backgroundColor" name="outgoingMessageBackground"/>
-                                        <constraints>
-                                            <constraint firstItem="XgP-vv-9gl" firstAttribute="centerX" secondItem="l4y-tb-IRs" secondAttribute="centerX" id="O8w-gq-ZWl"/>
-                                            <constraint firstItem="XgP-vv-9gl" firstAttribute="centerY" secondItem="l4y-tb-IRs" secondAttribute="centerY" id="fDG-PP-WC3"/>
-                                        </constraints>
-                                    </view>
                                 </subviews>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -144,6 +169,9 @@
                 <outlet property="lbl_number" destination="j0u-zD-udH" id="uIq-ik-mCE"/>
                 <outlet property="lbl_price" destination="KQn-4l-JtE" id="NVJ-BS-Mhr"/>
                 <outlet property="lbl_quantity" destination="caO-7y-orI" id="APw-qn-PdN"/>
+                <outlet property="lbl_status" destination="XgP-vv-9gl" id="qiz-Tg-xbQ"/>
+                <outlet property="lbl_time_order" destination="KON-ej-Bol" id="aWG-Lb-8tI"/>
+                <outlet property="view_status" destination="l4y-tb-IRs" id="dj4-95-LWz"/>
             </connections>
             <point key="canvasLocation" x="33.587786259541986" y="-11.267605633802818"/>
         </tableViewCell>
