--- a/CinemaBook/Scence/Manager/Management/MangamentBill/ManagementBillTickets/view/cell/ManagementBillProductItemTableViewCell.xib
+++ b/CinemaBook/Scence/Manager/Management/MangamentBill/ManagementBillTickets/view/cell/ManagementBillProductItemTableViewCell.xib
@@ -18,14 +18,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ManagementBillProductItemTableViewCell" customModule="CinemaBook" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="h3" translatesAutoresizingMaskIntoConstraints="NO" id="plX-Ll-tZr">
-                        <rect key="frame" x="20" y="25" width="100" height="100"/>
+                        <rect key="frame" x="20" y="50" width="100" height="100"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="0C7-0l-gKR"/>
                             <constraint firstAttribute="height" constant="100" id="irB-Wn-0st"/>
@@ -37,54 +37,60 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="doC-NV-F5N">
-                        <rect key="frame" x="0.0" y="149" width="400" height="1"/>
+                        <rect key="frame" x="0.0" y="199" width="400" height="1"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="Sk1-Sb-3hW"/>
                         </constraints>
                     </view>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="evE-Gp-t7e">
-                        <rect key="frame" x="140" y="20" width="240" height="110"/>
+                        <rect key="frame" x="140" y="20" width="240" height="160"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mã hoá đơn: 14" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6R-G7-02Y">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="22"/>
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="26.666666666666668"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tên phim" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FTZ-oL-uKG">
-                                <rect key="frame" x="0.0" y="22" width="240" height="22"/>
+                                <rect key="frame" x="0.0" y="26.666666666666664" width="240" height="26.666666666666664"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ghế: A1,C2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XSy-yH-sAq">
-                                <rect key="frame" x="0.0" y="44" width="240" height="22"/>
+                                <rect key="frame" x="0.0" y="53.333333333333321" width="240" height="26.666666666666664"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ngày chiếu: 2023-09-09" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cT-bU-Drt">
+                                <rect key="frame" x="0.0" y="80" width="240" height="26.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10,000,000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOJ-WD-Ucv">
-                                <rect key="frame" x="0.0" y="66" width="240" height="22"/>
+                                <rect key="frame" x="0.0" y="106.66666666666667" width="240" height="26.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tcO-48-DkX">
-                                <rect key="frame" x="0.0" y="88" width="240" height="22"/>
+                                <rect key="frame" x="0.0" y="133.33333333333334" width="240" height="26.666666666666657"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="iJV-Dg-Zmu">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="22"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="26.666666666666668"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="08/12/2023" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkE-h6-TmA">
-                                                <rect key="frame" x="0.0" y="0.0" width="120" height="22"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="120" height="26.666666666666668"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                 <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XpO-L2-l8H">
-                                                <rect key="frame" x="120" y="0.0" width="120" height="22"/>
+                                                <rect key="frame" x="120" y="0.0" width="120" height="26.666666666666668"/>
                                                 <color key="backgroundColor" systemColor="systemCyanColor"/>
                                                 <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -132,10 +138,12 @@
                 <outlet property="image_avatar" destination="plX-Ll-tZr" id="yKc-4X-dfa"/>
                 <outlet property="lbl_chair_list" destination="XSy-yH-sAq" id="aoV-I7-CsY"/>
                 <outlet property="lbl_date" destination="nkE-h6-TmA" id="pzA-ej-mnC"/>
+                <outlet property="lbl_date_createbill" destination="0cT-bU-Drt" id="WMt-ZT-6oU"/>
                 <outlet property="lbl_id_bill" destination="p6R-G7-02Y" id="SGb-jd-LwU"/>
                 <outlet property="lbl_name_movie" destination="FTZ-oL-uKG" id="g1n-Yo-tfu"/>
                 <outlet property="lbl_price" destination="OOJ-WD-Ucv" id="r9P-Me-bXQ"/>
                 <outlet property="lbl_time" destination="XpO-L2-l8H" id="gAE-m6-Pf2"/>
+                <outlet property="view_status" destination="mnp-GE-ldd" id="mnq-qN-o3c"/>
             </connections>
             <point key="canvasLocation" x="-9.1603053435114496" y="-11.267605633802818"/>
         </tableViewCell>
